[metadata]
name = MakeDjango
version = 0.0.1
description = simple command line tool for start project
author = Mahan Bakhshi
author_email = dirtymbgamer@gmail.com
maintainer = MahanBi
maintainer_email = dirtymbgamer@gmail.com
url = https://github.com/MahanBi/MakeDjango.git
project_urls =
    Bug Tracker = https://github.com/MahanBi/MakeDjango/issues
license = MIT
license = ["LICENSE"]
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
python_requires = >=3.8

[options.packages.find]
where = src