[metadata]
name = MakeDjango
version = 1.2.6
description = simple command line tool for start project
author = Mahan Bakhshi
author_email = dirtymbgamer@gmail.com
maintainer = Mahan Bakhshi
maintainer_email = dirtymbgamer@gmail.com
url = https://github.com/MahanBi/MakeDjango.git
project_urls =
    issues = https://github.com/MahanBi/MakeDjango/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
python_requires = <=3.9
[build-system]
requires = ["setuptools >=42"]
build-backend = "setuptools.build_meta"
[options.entry_points]
console_scripts =
    MakeDjango = MakeDjango.MakeDjango:main